complete dialog component

--- a/lib/icon/icon.scss
+++ b/lib/icon/icon.scss
@@ -1,5 +1,6 @@
 .rui-icon {
-    width: 1.4em;
-    height: 1.4em;
-    display: inline-block;
+   width: 1.2em;
+   height: 1.2em;
+   display: inline-block;
+   fill: currentColor;
 } 
